# snake

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md
src/: board.rs  game.rs  goal.rs  main.rs  score.rs  snake.rs  tile.rs  time.rs
src/model/: game.rs  goal.rs  mod.rs  snake.rs  time.rs
src/view/: board.rs  tile.rs
