[package]
name = "snick"
version = "0.3.0"
authors = ["Nick <nickallbritton@proton.me>"]
edition = "2024"
description = "Simple snake game powered by SDL3!"
repository = "https://github.com/NickAllbritton/snake"
license = "GPL-3.0-or-later"
readme = "README.md"
categories = ["games"]
keywords = ["graphics", "SDL3", "snake", "games"]

[dependencies]
glam = "0.30.2"
rand = "0.9.1"
sdl3 = "0.17"

[[bin]]
name = "snick"
